src/parser.js
// @generated by Peggy 4.2.0.
//
// https://peggyjs.org/


function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { HumanStart: peg$parseHumanStart, MachineStart: peg$parseMachineStart };
  var peg$startRuleFunction = peg$parseHumanStart;

  var peg$c0 = "//";
  var peg$c1 = "play";
  var peg$c2 = "note(";
  var peg$c3 = ")";
  var peg$c4 = "chord(";
  var peg$c5 = ",";
  var peg$c6 = "@";
  var peg$c7 = ":";
  var peg$c8 = "dur";
  var peg$c9 = "vel";
  var peg$c10 = "velocity";
  var peg$c11 = "strum";
  var peg$c12 = "pedal";
  var peg$c13 = "t";
  var peg$c14 = "n";
  var peg$c15 = "d";
  var peg$c16 = "v";
  var peg$c17 = "p[bend:";
  var peg$c18 = "]";
  var peg$c19 = "s[pan:";
  var peg$c20 = "C#";
  var peg$c21 = "Db";
  var peg$c22 = "D#";
  var peg$c23 = "Eb";
  var peg$c24 = "F#";
  var peg$c25 = "Gb";
  var peg$c26 = "G#";
  var peg$c27 = "Ab";
  var peg$c28 = "A#";
  var peg$c29 = "Bb";
  var peg$c30 = "c#";
  var peg$c31 = "db";
  var peg$c32 = "d#";
  var peg$c33 = "eb";
  var peg$c34 = "f#";
  var peg$c35 = "gb";
  var peg$c36 = "g#";
  var peg$c37 = "ab";
  var peg$c38 = "a#";
  var peg$c39 = "bb";
  var peg$c40 = "-";
  var peg$c41 = ".";

  var peg$r0 = /^[^\n]/;
  var peg$r1 = /^[a-zA-Z0-9+#]/;
  var peg$r2 = /^[^ \t\n\r@]/;
  var peg$r3 = /^[0-9]/;
  var peg$r4 = /^[0-9.]/;
  var peg$r5 = /^[A-Ga-g]/;
  var peg$r6 = /^[ \t\n\r]/;

  var peg$e0 = peg$literalExpectation("//", false);
  var peg$e1 = peg$classExpectation(["\n"], true, false);
  var peg$e2 = peg$literalExpectation("play", true);
  var peg$e3 = peg$literalExpectation("note(", false);
  var peg$e4 = peg$literalExpectation(")", false);
  var peg$e5 = peg$literalExpectation("chord(", false);
  var peg$e6 = peg$literalExpectation(",", false);
  var peg$e7 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "+", "#"], false, false);
  var peg$e8 = peg$literalExpectation("@", false);
  var peg$e9 = peg$literalExpectation(":", false);
  var peg$e10 = peg$literalExpectation("dur", true);
  var peg$e11 = peg$literalExpectation("vel", true);
  var peg$e12 = peg$literalExpectation("velocity", true);
  var peg$e13 = peg$literalExpectation("strum", true);
  var peg$e14 = peg$literalExpectation("pedal", true);
  var peg$e15 = peg$classExpectation([" ", "\t", "\n", "\r", "@"], true, false);
  var peg$e16 = peg$literalExpectation("T", true);
  var peg$e17 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e18 = peg$literalExpectation("N", true);
  var peg$e19 = peg$literalExpectation("D", true);
  var peg$e20 = peg$literalExpectation("V", true);
  var peg$e21 = peg$classExpectation([["0", "9"], "."], false, false);
  var peg$e22 = peg$literalExpectation("P[bend:", true);
  var peg$e23 = peg$literalExpectation("]", false);
  var peg$e24 = peg$literalExpectation("S[pan:", true);
  var peg$e25 = peg$literalExpectation("C#", false);
  var peg$e26 = peg$literalExpectation("Db", false);
  var peg$e27 = peg$literalExpectation("D#", false);
  var peg$e28 = peg$literalExpectation("Eb", false);
  var peg$e29 = peg$literalExpectation("F#", false);
  var peg$e30 = peg$literalExpectation("Gb", false);
  var peg$e31 = peg$literalExpectation("G#", false);
  var peg$e32 = peg$literalExpectation("Ab", false);
  var peg$e33 = peg$literalExpectation("A#", false);
  var peg$e34 = peg$literalExpectation("Bb", false);
  var peg$e35 = peg$literalExpectation("c#", false);
  var peg$e36 = peg$literalExpectation("db", false);
  var peg$e37 = peg$literalExpectation("d#", false);
  var peg$e38 = peg$literalExpectation("eb", false);
  var peg$e39 = peg$literalExpectation("f#", false);
  var peg$e40 = peg$literalExpectation("gb", false);
  var peg$e41 = peg$literalExpectation("g#", false);
  var peg$e42 = peg$literalExpectation("ab", false);
  var peg$e43 = peg$literalExpectation("a#", false);
  var peg$e44 = peg$literalExpectation("bb", false);
  var peg$e45 = peg$classExpectation([["A", "G"], ["a", "g"]], false, false);
  var peg$e46 = peg$literalExpectation("-", false);
  var peg$e47 = peg$literalExpectation(".", false);
  var peg$e48 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);

  var peg$f0 = function(s) {
  return flatten(s);
};
  var peg$f1 = function(s) {
  return flatten(s);
};
  var peg$f2 = function() { return null; };
  var peg$f3 = function(note, props) {
  return { type: 'play_note', note: note, props: (props||[]).map(x => x[1]) };
};
  var peg$f4 = function(root, quality, props) {
  return { type: 'play_chord', root: root, quality: quality, props: (props||[]).map(x => x[1]) };
};
  var peg$f5 = function(pitch, oct) { return pitch + oct; };
  var peg$f6 = function(pitch, oct) { return pitch + (oct || '4'); };
  var peg$f7 = function(qual) { return qual; };
  var peg$f8 = function(name, value) {
  return { name: name.toLowerCase(), value: value };
};
  var peg$f9 = function() { return null; };
  var peg$f10 = function(T, N, D, V, fx) {
  let props = [];
  if (D !== null) props.push({ name: 'dur', value: String(D) });
  if (V !== null) props.push({ name: 'vel', value: String(V) });
  const fxList = fx.map(x => x[1]);
  for (const f of fxList) props.push(f);

  return {
    type: 'machine_event',
    timestamp: T,
    midi: N,
    props: props,
    fx: fxList.reduce((acc, f) => { acc[f.name] = f.value; return acc; }, {})
  };
};
  var peg$f11 = function(d) { return parseInt(d.join(''), 10); };
  var peg$f12 = function(d) { return parseInt(d.join(''), 10); };
  var peg$f13 = function(d) { return parseInt(d.join(''), 10); };
  var peg$f14 = function(v) { return parseFloat(v.join('')); };
  var peg$f15 = function(d) {
  return { name: 'bend', value: d };
};
  var peg$f16 = function(v) {
  return { name: 'pan', value: v };
};
  var peg$f17 = function(d) { return d.join(''); };
  var peg$f18 = function(d) { return parseInt(d.join(''), 10); };
  var peg$f19 = function(sign, d) {
  return parseInt((sign||'') + d.join(''), 10);
};
  var peg$f20 = function(int, frac) {
  return parseFloat(int + '.' + frac.join(''));
};
  var peg$f21 = function(sign, int, frac) {
  return parseFloat((sign||'') + int.join('') + '.' + frac.join(''));
};
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseHumanStart() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = [];
    s3 = peg$parseHumanStatement();
    while (s3 !== peg$FAILED) {
      s2.push(s3);
      s3 = peg$parseHumanStatement();
    }
    s3 = peg$parse_();
    peg$savedPos = s0;
    s0 = peg$f0(s2);

    return s0;
  }

  function peg$parseMachineStart() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = [];
    s3 = peg$parseMachineStatement();
    while (s3 !== peg$FAILED) {
      s2.push(s3);
      s3 = peg$parseMachineStatement();
    }
    s3 = peg$parse_();
    peg$savedPos = s0;
    s0 = peg$f1(s2);

    return s0;
  }

  function peg$parseHumanStatement() {
    var s0;

    s0 = peg$parsePlayNote();
    if (s0 === peg$FAILED) {
      s0 = peg$parsePlayChord();
      if (s0 === peg$FAILED) {
        s0 = peg$parseHumanComment();
      }
    }

    return s0;
  }

  function peg$parseHumanComment() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (input.substr(peg$currPos, 2) === peg$c0) {
      s2 = peg$c0;
      peg$currPos += 2;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s2 !== peg$FAILED) {
      s3 = [];
      s4 = input.charAt(peg$currPos);
      if (peg$r0.test(s4)) {
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
      while (s4 !== peg$FAILED) {
        s3.push(s4);
        s4 = input.charAt(peg$currPos);
        if (peg$r0.test(s4)) {
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e1); }
        }
      }
      peg$savedPos = s0;
      s0 = peg$f2();
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsePlayNote() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = input.substr(peg$currPos, 4);
    if (s2.toLowerCase() === peg$c1) {
      peg$currPos += 4;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e2); }
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      if (input.substr(peg$currPos, 5) === peg$c2) {
        s4 = peg$c2;
        peg$currPos += 5;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e3); }
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parse_();
        s6 = peg$parseNoteWithOctave();
        if (s6 !== peg$FAILED) {
          s7 = peg$parse_();
          if (input.charCodeAt(peg$currPos) === 41) {
            s8 = peg$c3;
            peg$currPos++;
          } else {
            s8 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e4); }
          }
          if (s8 !== peg$FAILED) {
            s9 = peg$parse_();
            s10 = [];
            s11 = peg$currPos;
            s12 = peg$parse_();
            s13 = peg$parseProp();
            if (s13 !== peg$FAILED) {
              s12 = [s12, s13];
              s11 = s12;
            } else {
              peg$currPos = s11;
              s11 = peg$FAILED;
            }
            while (s11 !== peg$FAILED) {
              s10.push(s11);
              s11 = peg$currPos;
              s12 = peg$parse_();
              s13 = peg$parseProp();
              if (s13 !== peg$FAILED) {
                s12 = [s12, s13];
                s11 = s12;
              } else {
                peg$currPos = s11;
                s11 = peg$FAILED;
              }
            }
            s11 = peg$parse_();
            peg$savedPos = s0;
            s0 = peg$f3(s6, s10);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsePlayChord() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15, s16, s17;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = input.substr(peg$currPos, 4);
    if (s2.toLowerCase() === peg$c1) {
      peg$currPos += 4;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e2); }
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      if (input.substr(peg$currPos, 6) === peg$c4) {
        s4 = peg$c4;
        peg$currPos += 6;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e5); }
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parse_();
        s6 = peg$parseChordRoot();
        if (s6 !== peg$FAILED) {
          s7 = peg$parse_();
          if (input.charCodeAt(peg$currPos) === 44) {
            s8 = peg$c5;
            peg$currPos++;
          } else {
            s8 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e6); }
          }
          if (s8 !== peg$FAILED) {
            s9 = peg$parse_();
            s10 = peg$parseQuality();
            if (s10 !== peg$FAILED) {
              s11 = peg$parse_();
              if (input.charCodeAt(peg$currPos) === 41) {
                s12 = peg$c3;
                peg$currPos++;
              } else {
                s12 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e4); }
              }
              if (s12 !== peg$FAILED) {
                s13 = peg$parse_();
                s14 = [];
                s15 = peg$currPos;
                s16 = peg$parse_();
                s17 = peg$parseProp();
                if (s17 !== peg$FAILED) {
                  s16 = [s16, s17];
                  s15 = s16;
                } else {
                  peg$currPos = s15;
                  s15 = peg$FAILED;
                }
                while (s15 !== peg$FAILED) {
                  s14.push(s15);
                  s15 = peg$currPos;
                  s16 = peg$parse_();
                  s17 = peg$parseProp();
                  if (s17 !== peg$FAILED) {
                    s16 = [s16, s17];
                    s15 = s16;
                  } else {
                    peg$currPos = s15;
                    s15 = peg$FAILED;
                  }
                }
                s15 = peg$parse_();
                peg$savedPos = s0;
                s0 = peg$f4(s6, s10, s14);
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseNoteWithOctave() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parsePitch();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseOctave();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f5(s1, s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseChordRoot() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parsePitch();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseOctave();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      peg$savedPos = s0;
      s0 = peg$f6(s1, s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseQuality() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = [];
    s3 = input.charAt(peg$currPos);
    if (peg$r1.test(s3)) {
      peg$currPos++;
    } else {
      s3 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e7); }
    }
    if (s3 !== peg$FAILED) {
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = input.charAt(peg$currPos);
        if (peg$r1.test(s3)) {
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e7); }
        }
      }
    } else {
      s2 = peg$FAILED;
    }
    if (s2 !== peg$FAILED) {
      s1 = input.substring(s1, peg$currPos);
    } else {
      s1 = s2;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f7(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseProp() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 64) {
      s1 = peg$c6;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e8); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parsePropName();
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 58) {
          s4 = peg$c7;
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e9); }
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parse_();
          s6 = peg$parsePropValue();
          if (s6 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f8(s2, s6);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsePropName() {
    var s0;

    s0 = input.substr(peg$currPos, 3);
    if (s0.toLowerCase() === peg$c8) {
      peg$currPos += 3;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e10); }
    }
    if (s0 === peg$FAILED) {
      s0 = input.substr(peg$currPos, 3);
      if (s0.toLowerCase() === peg$c9) {
        peg$currPos += 3;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e11); }
      }
      if (s0 === peg$FAILED) {
        s0 = input.substr(peg$currPos, 8);
        if (s0.toLowerCase() === peg$c10) {
          peg$currPos += 8;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e12); }
        }
        if (s0 === peg$FAILED) {
          s0 = input.substr(peg$currPos, 5);
          if (s0.toLowerCase() === peg$c11) {
            peg$currPos += 5;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e13); }
          }
          if (s0 === peg$FAILED) {
            s0 = input.substr(peg$currPos, 5);
            if (s0.toLowerCase() === peg$c12) {
              peg$currPos += 5;
            } else {
              s0 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e14); }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parsePropValue() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = input.charAt(peg$currPos);
    if (peg$r2.test(s2)) {
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e15); }
    }
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = input.charAt(peg$currPos);
        if (peg$r2.test(s2)) {
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e15); }
        }
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      s0 = input.substring(s0, peg$currPos);
    } else {
      s0 = s1;
    }

    return s0;
  }

  function peg$parseMachineStatement() {
    var s0;

    s0 = peg$parseMachineEvent();
    if (s0 === peg$FAILED) {
      s0 = peg$parseMachineComment();
    }

    return s0;
  }

  function peg$parseMachineComment() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (input.substr(peg$currPos, 2) === peg$c0) {
      s2 = peg$c0;
      peg$currPos += 2;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s2 !== peg$FAILED) {
      s3 = [];
      s4 = input.charAt(peg$currPos);
      if (peg$r0.test(s4)) {
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
      while (s4 !== peg$FAILED) {
        s3.push(s4);
        s4 = input.charAt(peg$currPos);
        if (peg$r0.test(s4)) {
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e1); }
        }
      }
      peg$savedPos = s0;
      s0 = peg$f9();
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseMachineEvent() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13;
